--- a/POS/POS.Web/appsettings.json
+++ b/POS/POS.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "POSDB": "server=EIZARNWE-PC\\SQL2022;database=POS;user id=sa;password=p@ssw0rd;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    "POSDB": "server=EIZARNWE-PC\\SQL2022;database=POS_WEB;user id=sa;password=p@ssw0rd;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   }
 }
